# cads-catalogue-api-service

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Catalogue.Dockerfile  Dockerfile  Dockerfile.rej  Makefile  README.md  README.md.rej  docker-compose.yaml  environment-minver.yml  environment.dev  environment.stable  environment.yml  environment.yml.rej  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  on-push.yml
cads_catalogue_api_service/: __init__.py  client.py  collection_ext.py  config.py  constrictor.py  contents.py  database.py  dependencies.py  doi.py  exceptions.py  extension.py  extensions.py  fastapisessionmaker.py  main.py  messages.py  middlewares.py  models.py  sanity_check.py  schema_org.py  search_utils.py  serializers.py  session.py  status.py  temp_models.py  typeahead.py  vocabularies.py
cads_catalogue_api_service/models/: __init__.py  base.py  contents.py  schema_org.py  stac.py  status.py
ci/: environment-ci.yml  environment-integration.yml
docs/: cads-catalogue-api-tests.ipynb  conf.py  index.md
schemas/: README.txt  base_variables.json  cads-extension.json  changelog.json  dataset.json  dataset_preview.json  datasets.json  keywords.json  licences.json  messages.json  schema_org.json
tests/: conftest.py  integration_00_stac.py  integration_10_vocabularies.py  integration_20_messages.py  integration_30_check_urls.py  integration_40_schema_org.py  test_00_version.py  test_10_constrictor.py  test_10_restapi.py  test_10_search_utils.py  test_10_serializers.py  test_10_settings.py  test_10_sorting_paging.py  test_10_stac_fastapi.py  test_10_utils.py  test_20_serializers.py  test_20_session.py  test_20_stac_fastapi.py  test_20_vocabularies.py  test_30_messages.py  test_40_collection_ext.py  test_40_contents.py  test_40_doi.py  test_40_schema_org.py  test_50_dependencies.py  test_50_middlewares.py  test_60_sanity_check.py  test_70_status_models.py  test_constrictor.py  test_restapi.py  test_settings.py  testing.py
