[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "attrs",
  "cads-catalogue@git+https://github.com/ecmwf-projects/cads-catalogue.git",
  "cads-common@git+https://github.com/ecmwf-projects/cads-common.git",
  "fastapi",
  "python-dateutil",
  "sqlalchemy>=2.0.9",
  "stac_fastapi.api",
  "stac_fastapi.extensions",
  "stac_fastapi.types"
]
description = "STAC based API service for the Climate & Atmosphere Data Store"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-catalogue-api-service"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "stac_fastapi.*"
]

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools]
packages = ["cads_catalogue_api_service"]

[tool.setuptools_scm]
write_to = "cads_catalogue_api_service/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
