[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "attrs",
  "cads-catalogue@git+https://github.com/ecmwf-projects/cads-catalogue.git",
  "cads-common@git+https://github.com/ecmwf-projects/cads-common.git",
  "fastapi>=0.113.0",
  "pydantic",
  "pydantic-settings",
  "python-dateutil",
  "sqlalchemy>=2.0.9",
  "stac_fastapi.api",
  "stac_fastapi.extensions",
  "stac_fastapi.types",
  "typing_extensions>=4.6.0"  # required only for python<3.12
]
description = "STAC based API service for the Climate & Atmosphere Data Store"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-catalogue-api-service"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
exclude = "tests/"
plugins = "sqlalchemy.ext.mypy.plugin"
strict = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "stac_fastapi.*"
]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_catalogue_api_service"]

[tool.setuptools_scm]
fallback_version = "999"
write_to = "cads_catalogue_api_service/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
