[metadata]
name = cads-catalogue-api-service
license = Apache License 2.0
description = STAC based API service for the Climate & Atmosphere Data Store
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =
    attrs
    fastapi
    stac_fastapi.api
    stac_fastapi.extensions
    stac_fastapi.types

[flake8]
max-line-length = 110
extend-ignore = E203, W503
