[metadata]
name = cads-catalogue-api-service
license = Apache License 2.0
description = STAC based API service for the Climate & Atmosphere Data Store
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: FastAPI
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =
    attrs
    cads-catalogue
    fastapi
    fastapi-utils
    python-dateutil
    sqlalchemy
    stac_fastapi.api
    stac_fastapi.extensions
    stac_fastapi.types


[options.package_data]
cads_catalogue_api_service =
    py.typed

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
plugins = sqlmypy
exclude = tests

[mypy-stac_fastapi]
ignore_missing_imports = True

[mypy-stac_fastapi.types]
ignore_missing_imports = True

[mypy-stac_fastapi.types.config]
ignore_missing_imports = True

[mypy-stac_fastapi.types.conformance]
ignore_missing_imports = True

[mypy-stac_fastapi.types.links]
ignore_missing_imports = True

[mypy-stac_fastapi.types.stac]
ignore_missing_imports = True

[mypy-stac_fastapi.api]
ignore_missing_imports = True

[mypy-stac_fastapi.api.app]
ignore_missing_imports = True

[mypy-stac_fastapi.extensions]
ignore_missing_imports = True

[mypy-stac_fastapi.extensions.core]
ignore_missing_imports = True

[mypy-psycopg2]
ignore_missing_imports = True

[mypy-sqlalchemy]
ignore_missing_imports = True
